fixed resizing cols alignment across header row and client row

--- a/app/globals.css
+++ b/app/globals.css
@@ -200,12 +200,3 @@
     background-position: 100% 50%;
   }
 }
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
